[package]
name = "prj5"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.35", features = ["derive"] }
hostname = "0.4.0"
indexmap = "2.8.0"
nom = "8.0.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
